quick-install/kubernetes/ovc-keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovc-keycloak-service-nodeport
  namespace: ovc-infra
spec:
  type: NodePort
  selector: { app: ovc-keycloak }
  ports: [{ name: http, port: 8080, targetPort: 8080, nodePort: 30080 }]
