quick-install/kubernetes/ovc-keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovc-keycloak-ingress
  namespace: ovc-infra
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.openvcenter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ovc-keycloak-service-nodeport
                port: { number: 8080 }
